--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="register_success_title">ការចុះឈ្មោះជោគជ័យ</string>
-    <string name="register_success_message">ការចូះឈ្មោះរបស់លោកអ្នក បានបញ្ចប់ដោយជោគជ័យ!
-        ក្រុមការងារយើងខ្ញំនឹងទាក់ទងទៅលោកអ្នក ក្នុងករណីលោកអ្នកត្រូវបានជ្រើសរើស។ សួមអគុណ!​​​
+    <string name="register_success_message">ការចូះឈ្មោះរបស់លោកអ្នក បានបញ្ចប់ដោយជោគជ័យ! ក្រុមការងារយើងខ្ញំនឹងទាក់ទងទៅលោកអ្នក ក្នុងករណីលោកអ្នកត្រូវបានជ្រើសរើស។ សួមអគុណ!​​​
     </string>
     <string name="close">បិទ</string>
+    <string name="register_failed_message">ការចុះឈ្មោះបរាជ័យ ការចុះឈ្មោះរបស់លោកអ្នកបរាជ័យ! សូមបំពេញព័ត៌មានរបស់លោកអ្នក ឲ្យបានត្រឹមត្រូវ ហើយសាកល្បងម្តងទៀត។ សូមអរគុណ!
+    </string>
     <string-array name="genders_list">
         <item>ប្រុស</item>
         <item>ស្រី</item>
